# pyhashcat

./: CMakeLists.txt  readme.md  setup.py  setup.sh
pyhashcat/: __init__.py  pyhashcat.c
tests/: benchmark.py  simple_mask.py
